# esp32-s3-pipecat-pubilc

./: .gitignore  README.md
esp32-s3-box-3/: CMakeLists.txt  sdkconfig.defaults
esp32-s3-box-3/components/esp-ml307/: CMakeLists.txt
esp32-s3-box-3/components/esp-ml307/include/: at_modem.h
esp32-s3-box-3/components/esp-ml307/src/: at_modem.cc  at_uart.cc  web_socket.cc
esp32-s3-box-3/components/esp-ml307/src/esp/: esp_ssl.cc  vocat_device_ca.h
esp32-s3-box-3/components/esp-ml307/src/ml307/: ml307_ssl.cc  ml307_tcp.cc  ml307_tcp.h
esp32-s3-box-3/components/esp32-idf-sqlite3/: config_ext.h  esp32.c
esp32-s3-box-3/data/ava_speech/hf_mirror/: README.md
esp32-s3-box-3/src/: CMakeLists.txt  audio_storage.cpp  board_config.h  cellular.cpp  deepmem_ws.cpp  hardware_audio.cpp  idf_component.yml  main.cpp  main.h  screen.cpp  sdcard.cpp  song_player.cpp  vad.cpp  vad.h  vad_serial_test.cpp  wifi.cpp
esp32-s3-box-3/tools/vad_benchmark/: README.md  ava_vad_benchmark.py  esp32_espsr_vad_ava_report.md  esp32_vad_serial.py
